Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37164

Assertion `vers_conditions.delete_history' failed upon PREPARE

    XMLWordPrintable

Details

    • Unexpected results

    Description

      CREATE TABLE t (a INT) WITH SYSTEM VERSIONING;
      INSERT INTO t VALUES (1),(2);
      PREPARE stmt FROM 'SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP ?';
       
      DROP TABLE t;
      

      10.11 ef57d4d74d2927e3b2b15b5bb86e046d531e1c31

      mariadbd: /data/bld/10.11-asan-ubsan/sql/sql_select.cc:1325: int st_select_lex::vers_setup_conds(THD*, TABLE_LIST*): Assertion `vers_conditions.delete_history' failed.
      250704 20:36:36 [ERROR] /share8t/bld/10.11-asan-ubsan/sql/mariadbd got signal 6 ;
       
      #10 0x00007f96f6253eb2 in __GI___assert_fail (assertion=0x555ff63fb860 "vers_conditions.delete_history", file=0x555ff63f55e0 "/data/bld/10.11-asan-ubsan/sql/sql_select.cc", line=1325, function=0x555ff63fb7c0 "int st_select_lex::vers_setup_conds(THD*, TABLE_LIST*)") at ./assert/assert.c:101
      #11 0x0000555ff2c691e7 in st_select_lex::vers_setup_conds (this=this@entry=0x62d00026e240, thd=<optimized out>, tables=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_select.cc:1325
      #12 0x0000555ff2d30e4c in JOIN::prepare (this=this@entry=0x62d00005a698, tables_init=<optimized out>, conds_init=<optimized out>, og_num=og_num@entry=0, order_init=order_init@entry=0x0, skip_order_by=skip_order_by@entry=false, group_init=<optimized out>, having_init=<optimized out>, proc_param_init=<optimized out>, select_lex_arg=<optimized out>, unit_arg=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_select.cc:1470
      #13 0x0000555ff3055f36 in st_select_lex_unit::prepare_join (this=this@entry=0x62d00026c520, thd_arg=0x62c0000b0218, sl=sl@entry=0x62d00026e240, tmp_result=tmp_result@entry=0x0, additional_options=additional_options@entry=0, is_union_select=is_union_select@entry=false) at /data/bld/10.11-asan-ubsan/sql/sql_union.cc:1115
      #14 0x0000555ff30640da in st_select_lex_unit::prepare (this=this@entry=0x62d00026c520, derived_arg=<optimized out>, sel_result=sel_result@entry=0x0, additional_options=additional_options@entry=0) at /data/bld/10.11-asan-ubsan/sql/sql_union.cc:1503
      #15 0x0000555ff2b9816e in mysql_test_select (stmt=stmt@entry=0x61900005af98, tables=tables@entry=0x62d00026ea78) at /data/bld/10.11-asan-ubsan/sql/sql_prepare.cc:1626
      #16 0x0000555ff2b9f76c in check_prepared_statement (stmt=stmt@entry=0x61900005af98) at /data/bld/10.11-asan-ubsan/sql/sql_prepare.cc:2532
      #17 0x0000555ff2bb2e32 in Prepared_statement::prepare (this=this@entry=0x61900005af98, packet=<optimized out>, packet_len=<optimized out>) at /data/bld/10.11-asan-ubsan/sql/sql_prepare.cc:4475
      #18 0x0000555ff2bbf78c in mysql_sql_stmt_prepare (thd=thd@entry=0x62c0000b0218) at /data/bld/10.11-asan-ubsan/sql/sql_prepare.cc:3054
      #19 0x0000555ff2ab891b in mysql_execute_command (thd=thd@entry=0x62c0000b0218, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:4024
      #20 0x0000555ff2adac07 in mysql_parse (thd=thd@entry=0x62c0000b0218, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7f96ec2c8ab0) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:8180
      #21 0x0000555ff2ae3edb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x62c0000b0218, packet=packet@entry=0x62900024e219 "PREPARE stmt FROM 'SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP ?'", packet_length=packet_length@entry=69, blocking=blocking@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:1906
      #22 0x0000555ff2af0b17 in do_command (thd=thd@entry=0x62c0000b0218, blocking=blocking@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_parse.cc:1419
      #23 0x0000555ff32e2e5c in do_handle_one_connection (connect=<optimized out>, connect@entry=0x6080000039b8, put_in_cache=put_in_cache@entry=true) at /data/bld/10.11-asan-ubsan/sql/sql_connect.cc:1386
      #24 0x0000555ff32e3fb9 in handle_one_connection (arg=0x6080000039b8) at /data/bld/10.11-asan-ubsan/sql/sql_connect.cc:1298
      #25 0x0000555ff4c44131 in pfs_spawn_thread (arg=0x617000005b98) at /data/bld/10.11-asan-ubsan/storage/perfschema/pfs.cc:2201
      #26 0x00007f96f62a81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #27 0x00007f96f632885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      No obvious immediate problem on a non-debug build.

      The failure started happening after this commit in 10.11:

      commit f1f9284181bb6dcf438f64a72f2bb3102f74e45c (HEAD)
      Commit:     Aleksey Midenkov
      CommitDate: Thu Jun 12 14:52:00 2025 +0300
       
          MDEV-34046 Parameterized PS converts error to warning, causes
                     replication problems
      

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.