MDEV-37164 Assertion `vers_conditions.delete_history' failed upon PREPARE

Wrong assertion was added by f1f9284181b (MDEV-34046) because PS
parameter is applicable not only to DELETE HISTORY.

Keeping value of select_lex->where for DELETE HISTORY was remade via
prep_where which is read by reinit_stmt_before_use(). For SELECT
prep_where is set in JOIN::optimize_inner() and that is not called for
DELETE.